--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hannes & Co.</title>
+        <title>CHOWKAT</title>
         <link rel="stylesheet" href="./src/css/main.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="icon" type="image/svg+xml" href="./images/header/favicon.svg">
@@ -66,7 +66,7 @@
                         <i class="fa fa-star-o"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <p>$41.99</p>
+                    <p>₹41.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-2.webp"></a>
@@ -78,7 +78,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-half-o"></i>
                     </div>
-                    <p>$139.99</p>
+                    <p>₹139.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-3.webp"></a>
@@ -90,7 +90,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                     </div>
-                    <p>$59.99</p>
+                    <p>₹59.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-4.webp"></a>
@@ -102,7 +102,7 @@
                         <i class="fa fa-star-o"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <p>$39.99</p>
+                    <p>₹39.99</p>
                 </div>
             </div>
             <h2>Latest Releases</h2>
@@ -118,7 +118,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                     </div>
-                    <p>$63.99</p>
+                    <p>₹63.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-6.webp"></a>
@@ -130,7 +130,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                     </div>
-                    <p>$57.99</p>
+                    <p>₹57.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-7.webp"></a>
@@ -142,7 +142,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <p>$45.99</p>
+                    <p>₹45.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-8.webp"></a>
@@ -154,7 +154,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <p>$59.99</p>
+                    <p>₹59.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-9.webp"></a>
@@ -166,7 +166,7 @@
                         <i class="fa fa-star-half-o"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <p>$15.99</p>
+                    <p>₹15.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-10.webp"></a>
@@ -178,7 +178,7 @@
                         <i class="fa fa-star-half-o"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <p>$80.99</p>
+                    <p>₹80.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-11.webp"></a>
@@ -190,7 +190,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-half-o"></i>
                     </div>
-                    <p>$60.99</p>
+                    <p>₹60.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-12.webp"></a>
@@ -202,7 +202,7 @@
                         <i class="fa fa-star-o"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <p>$19.99</p>
+                    <p>₹19.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-13.webp"></a>
@@ -214,7 +214,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-half-o"></i>
                     </div>
-                    <p>$149.99</p>
+                    <p>₹149.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-14.webp"></a>
@@ -226,7 +226,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-half-o"></i>
                     </div>
-                    <p>$72.99</p>
+                    <p>₹72.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-15.webp"></a>
@@ -238,7 +238,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-half-o"></i>
                     </div>
-                    <p>$29.99</p>
+                    <p>₹29.99</p>
                 </div>
                 <div class="childprods">
                     <a href="./product_details.html"><img src="./images/products/product-16.webp"></a>
@@ -250,7 +250,7 @@
                         <i class="fa fa-star-o"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <p>$19.99</p>
+                    <p>₹19.99</p>
                 </div>
             </div>
         </div>
@@ -323,7 +323,7 @@
                 <div class="child">
                     <div class="footerChild1">
                         <img src="images/header/complogo.png">
-                        <h4>Mail us at: <a href="mailto:hannes@hannesdev.xyz">hannesc@hannesdev.xyz</a></h4>
+                        <h4>Mail us at: <a href="mailto:contact@itstejas.in">contact@itstejas.in</a></h4>
                     </div>
                     <div class="footerChild2">
                         <h3>Help</h3>
@@ -354,8 +354,8 @@
                     </div>
                 </div>
                 <div class="belowfooter">
-                    &copy; Hannes & Co. Associates, 2023 <br>
-                    Aditya Chakravorty, All rights reserved.
+                    &copy; CHOWKAT, 2025 <br>
+                     All rights reserved.
                 </div>
             </div>
         </div>
