--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="headerimg">
             <h1>If you have everything under control, you're not moving fast enough!</h1>
-            <h3>Experience trekking like you have never before. Try our new sports shoes starting at just $139*</h3>
+            <h3>Experience trekking like you have never before. Try our new sports shoes starting at just ₹139*</h3>
             <a href="./product_details.html" class="btn">Explore Now &#8594;</a>
         </div>
         <div class="offer">
